# DistClassiPy

./: .buildinfo  .coverage  .gitignore  CITATION.cff  README.md  TEST_REPORT.txt  classifier.html  classifier.py  distances.html  distances.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  robustness-code.md  search.html  searchindex.js  setup.py  tutorial.html  tutorial.ipynb
.github/workflows/: black.yml  documentation.yml  linter.yml  main.yml  testing-and-coverage.yml
_build/: .buildinfo  classifier.html  distances.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: classifier.doctree  distances.doctree  environment.pickle  index.doctree
_sources/: index.rst
_static/: copybutton.js  documentation_options.js
distclassipy/: __init__.py  anomaly.py  classifier.py  distances.py  neighbors.py  robustness.py  version.py
distclassipy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: classifier.rst  conf.py  index.rst  requirements.txt  tutorial.rst
docs/_build/doctrees/: classifier.doctree  distances.doctree  environment.pickle
docs/_build/html/: .buildinfo  classifier.html  distances.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: distances.rst.txt  index.rst.txt
tests/: test_classifier.py  test_distances.py  test_distances_prop.py
