[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distclassipy"
dynamic = ["version"]
description = "A python package for a distance-based classifier which can use several different distance metrics."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Siddharth Chaini", email = "sidchaini@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
dependencies = [
    "joblib>=1.3.2",
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "scikit-learn>=1.2.2"
]

[tool.setuptools.dynamic]
version = {attr = "distclassipy.__version__"}

[project.urls]
Repository = "https://github.com/sidchaini/DistClassiPy"
Documentation = "https://sidchaini.github.io/DistClassiPy/"
